RESOLVED FIXED173454
[iOS DnD] [WK1] Dropping links onto UIWebViews should not trigger navigation by default
https://bugs.webkit.org/show_bug.cgi?id=173454
Summary [iOS DnD] [WK1] Dropping links onto UIWebViews should not trigger navigation ...
Wenson Hsieh
Reported 2017-06-15 19:26:16 PDT
Attachments
Patch (4.15 KB, patch)
2017-06-15 20:09 PDT, Wenson Hsieh
no flags
Wenson Hsieh
Comment 1 2017-06-15 20:09:59 PDT
Wenson Hsieh
Comment 2 2017-06-15 21:01:59 PDT
Comment on attachment 313051 [details] Patch Thanks Tim!
WebKit Commit Bot
Comment 3 2017-06-15 21:06:08 PDT
Comment on attachment 313051 [details] Patch Clearing flags on attachment: 313051 Committed r218380: <http://trac.webkit.org/changeset/218380>
WebKit Commit Bot
Comment 4 2017-06-15 21:06:09 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.