[iOS DnD] [WK1] Dropping links onto UIWebViews should not trigger navigation by default https://bugs.webkit.org/show_bug.cgi?id=173454 <rdar://problem/31720671>

Reviewed by Tim Horton.

Adds -webView:dragDestinationActionMaskForSession: as SPI to WebUIDelegate.
If unimplemented, the default UI delegate allows all actions except for URL loading.

* DefaultDelegates/WebDefaultUIDelegate.mm:
(-[WebDefaultUIDelegate webView:dragDestinationActionMaskForSession:]):
* WebView/WebUIDelegatePrivate.h:
* WebView/WebView.mm:
(-[WebView dragDestinationActionMaskForSession:]):


Canonical link: https://commits.webkit.org/190331@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@218380 268f45cc-cd09-0410-ab3c-d52691b4dbfc